changed font-family for h1-h3

--- a/Crane-Ashley-final-project2/css/styles.css
+++ b/Crane-Ashley-final-project2/css/styles.css
@@ -36,7 +36,7 @@
 		
 	
 	h1, h2, h3 {
-		font-family: 'Shadows Into Light', cursive;
+		font-family: "Shadows Into Light", cursive;
 		font-weight: normal;
 		font-style: oblique;
 		color: #28342E;
