--- a/Crane-Ashley-final-project3/css/styles.css
+++ b/Crane-Ashley-final-project3/css/styles.css
@@ -3,7 +3,7 @@
 	#page {
 		height: 100%;
 		width: 90%;
-		border: 2% ridge white;
+		border: 2px ridge white;
 		padding: 20px;
 		margin: 10px auto;
 		border-radius: 20px 20px 20px 20px;
@@ -56,7 +56,6 @@
 		width: 60%;
 		float: left;
 		margin: 1%;
-		oveflow: auto;
 	}
 		#column2 {
 		width: 30%;
@@ -149,7 +148,7 @@
 		
 	#image3 {
 		width: 79%;
-		height: 10%px;
+		height: 10%;
 		border: .2em solid #000;
 		padding: .5%;
 		margin-bottom: 15% ;
