updated border color

--- a/Crane-Ashley-final-project3/css/styles.css
+++ b/Crane-Ashley-final-project3/css/styles.css
@@ -9,7 +9,7 @@
 		border-radius: 20px 20px 20px 20px;
 		background-color: #F6FAF6;
 		opacity: 0.95;
-		box-shadow: 0 0 10px 10px #9BBF16;
+		box-shadow: 0 0 10px 10px #68591A;
 		}
 		
 	body {
