changed css style for border

--- a/Crane-Ashley-final-project3/css/styles.css
+++ b/Crane-Ashley-final-project3/css/styles.css
@@ -120,7 +120,7 @@
 		border-radius: 20px 20px 20px 20px;
 		background-color: #F6FAF6;
 		opacity: 0.85;
-		box-shadow: 10px 10px 10px 10px #07411B;
+		box-shadow: 10px 10px 10px 10px #68591A;
 		float: left;
 		background: linear-gradient(#9BBF16, #677F0F);
 		}
